<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".Actividades"
    >

    <TextView
        android:id="@+id/actividades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acti"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:fontFamily="sans-serif-black"
        android:textSize="25dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/cerrotusa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerro"
        app:layout_constraintTop_toBottomOf="@id/actividades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:textColor="@color/fondo"
        />
    <TextView
        android:id="@+id/cerrobravo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrobravo"
        app:layout_constraintTop_toBottomOf="@id/actividades"
        app:layout_constraintStart_toEndOf="@id/cerrotusa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.8"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/cuevas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuevas"
        app:layout_constraintTop_toBottomOf="@id/cerrotusa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:textColor="@color/fondo"
        />
    <TextView
        android:id="@+id/diosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diosa"
        app:layout_constraintTop_toBottomOf="@id/cerrobravo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.8"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/piedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piedra"
        app:layout_constraintTop_toBottomOf="@id/cuevas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.1"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:textColor="@color/fondo"
        />
    <TextView
        android:id="@+id/mirador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mirado"
        app:layout_constraintTop_toBottomOf="@id/diosa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.8"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
</android.support.constraint.ConstraintLayout>