<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

   >

    <ImageView
        android:id="@+id/imagensprings"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/springs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/tituloSprings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/springs"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagensprings"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/serviciosSprings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicios"
        app:layout_constraintTop_toBottomOf="@id/tituloSprings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="15dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/fondo"/>

    <ImageView
    android:id="@+id/imagenwifi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_baseline_wifi_24"
    app:layout_constraintTop_toBottomOf="@id/serviciosSprings"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.05"
    app:layout_constraintHorizontal_bias="0.4"/>

    <TextView
        android:id="@+id/textowifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        app:layout_constraintTop_toBottomOf="@id/serviciosSprings"
        app:layout_constraintStart_toEndOf="@id/imagenwifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1" />

    <ImageView
        android:id="@+id/imagenrestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_restaurant_24"
        app:layout_constraintTop_toBottomOf="@id/imagenwifi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.4"/>

    <TextView
        android:id="@+id/textorestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurante"
        app:layout_constraintTop_toBottomOf="@id/textowifi"
        app:layout_constraintStart_toEndOf="@id/imagenrestaurante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintHorizontal_bias="0.1"

        />

    <ImageView
        android:id="@+id/imagenpiscina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_water_24"
        app:layout_constraintTop_toBottomOf="@id/imagenrestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.4"/>

    <TextView
        android:id="@+id/textopiscina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piscina"
        app:layout_constraintTop_toBottomOf="@id/textorestaurante"
        app:layout_constraintStart_toEndOf="@id/imagenpiscina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintHorizontal_bias="0.1"

        />
    <ImageView
        android:id="@+id/imagenparking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_local_parking_24"
        app:layout_constraintTop_toBottomOf="@id/imagenpiscina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.4"/>

    <TextView
        android:id="@+id/textoparking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking"
        app:layout_constraintTop_toBottomOf="@id/textopiscina"
        app:layout_constraintStart_toEndOf="@id/imagenparking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintHorizontal_bias="0.1"
        />

    <TextView
        android:id="@+id/textoprecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        app:layout_constraintTop_toBottomOf="@id/textoparking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintHorizontal_bias="0.5"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        />

</android.support.constraint.ConstraintLayout>