<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imagenlagraciela"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/lagraciela"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tituloComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/resGraciela"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenlagraciela"
        app:layout_constraintVertical_bias="0.1" />
    <TextView
        android:id="@+id/tiposcomida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiposcomida"
        app:layout_constraintTop_toBottomOf="@id/tituloComida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="15dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/fondo"/>
    <TextView
        android:id="@+id/textocomida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comida"
        app:layout_constraintTop_toBottomOf="@id/tiposcomida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintHorizontal_bias="0.5" />
</android.support.constraint.ConstraintLayout>