<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/botones"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.43"
        />
    <TextView
        android:id="@+id/textobotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel"
        app:layout_constraintTop_toBottomOf="@id/botones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.25"
        android:fontFamily="sans-serif-black"
        />

    <ImageButton
        android:id="@+id/restaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/restaurantes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.43"
        />
    <TextView
        android:id="@+id/textorestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restau"
        app:layout_constraintTop_toBottomOf="@id/restaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.8"
        android:fontFamily="sans-serif-black"
        />
    <ImageButton
        android:id="@+id/turistico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/montana"
        app:layout_constraintTop_toBottomOf="@+id/textobotones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2"
        />
    <TextView
        android:id="@+id/textolugares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sitio"
        app:layout_constraintTop_toBottomOf="@id/turistico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.18"
        android:fontFamily="sans-serif-black"
        />
    <ImageButton
        android:id="@+id/guia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/guia"
        app:layout_constraintTop_toBottomOf="@id/textorestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.2"/>
    <TextView
        android:id="@+id/textoguia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia"
        app:layout_constraintTop_toBottomOf="@id/guia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.82"
        android:fontFamily="sans-serif-black"
        />



</android.support.constraint.ConstraintLayout>